<resources>
    <string name="app_name">Single Screen App</string>
    <string name="eldeco_mansionz">Eldeco Mansionz</string>
    <string name="mob">+91234567890</string>
    <string name="add">201-212, 2nd Floor, Splendor Forum, Jasola District Centre New Delhi</string>
    <string name="time">7am to 5pm Daily</string>
    <string name="web">http://www.eldecogroup.com/</string>
    <string name="about">The Eldeco Group has been at the forefront of Real Estate development in North India since 1985. The group is synonymous with timely and quality delivery in a number of cities like Lucknow, Kanpur, Agra, Noida, Greater Noida and other parts of NCR of Delhi. Carrying more than 30 years of expertise in construction and real estate development, Eldeco has delivered more than 175 projects spanning townships, high-rise condominiums, industrial estates, malls and office complexes. In addition, 30 projects are in various stages of active execution. The aggregate delivered area stands at more than 20 million sq.ft. with more than 25000 satisfied customers. Currently, apart from the towns mentioned above, Eldeco is developing projects in Panipat, Sonepat, Ludhiana, Jhansi, Neemrana and Jalandhar. The unique 1200 acres state-of-the-art Eldeco Sidcul Industrial Park at Sitarganj, Uttarakhand, is Eldeco\'s flagship project in the industrial sector. Eldeco\'s strength lies in its professional and experienced workforce. Apart from in-house capabilities, Eldeco employs best-in-class consultants and experts to deliver state-of-the-art projects. The group\'s business activities rest on the principles of high quality, superior construction technology and high consumer satisfaction. Over the years, the group has won numerous awards and accolades for its projects. The Group has two main companies: Eldeco Housing and Industries Ltd. (EHIL): Incorporated in 1985, EHIL has held an uninterrupted market leadership position in major towns of UP. Since 2006 EHIL has concentrated on its projects in Lucknow, U.P. EHIL is listed on the Bombay Stock Exchange and has had an uninterrupted dividend paying record since 1985. Eldeco Infrastructure and Properties Ltd. (EIPL): Incorporated in 2000 to professionally undertake projects in the NCR, EIPL in recent years has seen rapid growth in other regions as well. EIPL is a closely held unlisted company that also acts as the promoting company for many project specific special purpose companies.</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>

</resources>
